--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <style>
+    :not(form).ng-invalid input{
+      border-left: 5px solid #d34d4a; /* red */  
+    }
+
     input.ng-invalid:not(form)  {
 			border-left: 5px solid #d34d4a; /* red */
 		}
