Fully adopted ng value accessor. Now consuming JSON from node/ express

--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <style>
-    :not(form).ng-invalid input{
+    app-dynamic-question.ng-invalid input{
       border-left: 5px solid #d34d4a; /* red */  
     }
 
-    input.ng-invalid:not(form)  {
-			border-left: 5px solid #d34d4a; /* red */
-		}
-    select.ng-invalid{
+    app-dynamic-question.ng-invalid select{
       border-left: 5px solid #d34d4a; /* red */
     }
   </style>
